packages/docs/pages/v1/project-structure.mdx
---
title: Project Structure
description: How a Tome documentation project is organized — pages, config, entry point, and build output.
icon: folder
---

Every Tome project follows the same layout. Understanding it helps you customize and extend your docs.

## Directory layout

<FileTree>
  <FileTree.Folder name="my-docs" defaultOpen>
    <FileTree.Folder name="pages" defaultOpen>
      <FileTree.File name="index.md" />
      <FileTree.File name="quickstart.md" />
      <FileTree.Folder name="guides" defaultOpen>
        <FileTree.File name="setup.md" />
        <FileTree.File name="deploy.md" />
      </FileTree.Folder>
      <FileTree.Folder name="api">
        <FileTree.File name="endpoints.mdx" />
      </FileTree.Folder>
    </FileTree.Folder>
    <FileTree.Folder name=".tome">
      <FileTree.File name="entry.tsx" />
    </FileTree.Folder>
    <FileTree.File name="tome.config.js" />
    <FileTree.File name="index.html" />
    <FileTree.File name="package.json" />
    <FileTree.Folder name="out">
      <FileTree.File name="index.html" />
      <FileTree.Folder name="assets">
        <FileTree.File name="index-[hash].js" />
        <FileTree.File name="index-[hash].css" />
      </FileTree.Folder>
    </FileTree.Folder>
  </FileTree.Folder>
</FileTree>

## Key files

### `pages/` directory

All your documentation lives here. Every `.md` and `.mdx` file becomes a page. The directory structure maps directly to URL paths:

| File path | Page ID | URL path |
|-----------|---------|----------|
| `pages/index.md` | `index` | `/` |
| `pages/quickstart.md` | `quickstart` | `/quickstart` |
| `pages/guides/setup.md` | `guides/setup` | `/guides/setup` |

Files named `index.md` in subdirectories resolve to the directory path. For example, `pages/guides/index.md` maps to `/guides`.

### `tome.config.js`

The central configuration file. Controls your site name, sidebar navigation, theme, search, and more:

```javascript
export default {
  name: "My Docs",
  theme: { preset: "amber", mode: "auto" },
  navigation: [
    { group: "Getting Started", pages: ["index", "quickstart"] },
    { group: "Guides", pages: ["guides/setup", "guides/deploy"] },
  ],
};
```

See **[Configuration](#configuration)** for the full schema.

### `.tome/entry.tsx`

The application entry point. For most projects, this is a single import:

```tsx
import "@tomehq/theme/entry";
```

This boots the Tome shell — the sidebar, search, theme switcher, and content renderer. You generally don't need to modify this file.

### `index.html`

The HTML shell that loads your documentation app. Contains the `<div id="tome-root">` mount point and the script tag for the entry file.

### `out/` directory

Generated by `tome build`. Contains the static site output ready for deployment — HTML, JavaScript bundles, a search index, and auto-generated `llms.txt` and `llms-full.txt` files for AI discoverability. This directory is gitignored by default.

## Markdown vs MDX

Tome supports both file types:

- **`.md` files** — Standard Markdown with frontmatter. Processed at build time into HTML. Good for most documentation pages.
- **`.mdx` files** — Markdown with JSX support. You can import and use React components like `<Callout>`, `<Tabs>`, and `<Steps>` directly in your content.

Both file types support the same frontmatter fields and appear identically in the sidebar.

## Next steps

- **[Pages & Routing](#pages-routing)** for details on how files map to URLs
- **[Components](#components)** for using interactive elements in `.mdx` files
- **[Configuration](#configuration)** for the full config schema
